# leptos-dev-template

./: Cargo.toml  README.md  script.sh
app/: Cargo.toml
server/: Cargo.toml
style/: main.scss
