[package]
name = "app"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
hydrate = [
  "leptos/hydrate",
  "leptos_meta/hydrate",
  "leptos_router/hydrate",
]
ssr = [
  "dep:leptos_axum",
  "dep:thiserror",
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
]

[dependencies]
console_error_panic_hook = { workspace = true }
leptos = { workspace = true }
leptos_axum = { workspace = true, optional = true }
leptos_meta = { workspace = true }
leptos_router = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true, optional = true }
wasm-bindgen = { workspace = true }
